force-app/main/default/objects/Prometheion_Audit_Log__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <description>Compliance framework associated with this audit log entry</description>
    <label>Framework</label>
    <type>Text</type>
    <length>50</length>
</CustomField>