force-app/main/default/objects/Prometheion_Audit_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>ID of the related record for this audit log entry</description>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>